--- a/Glyph/Glyph.csproj
+++ b/Glyph/Glyph.csproj
@@ -70,6 +70,13 @@
     <Compile Include="IO\DataContractSerializationFormat.cs" />
     <Compile Include="IO\ISerializationFormat.cs" />
     <Compile Include="IO\Base\SerializationFormatBase.cs" />
+    <Compile Include="Math\IRange.cs" />
+    <Compile Include="Math\Range.cs" />
+    <Compile Include="Math\RangeArea.cs" />
+    <Compile Include="Math\RangeUtils.cs" />
+    <Compile Include="Math\Shapes\Segment.cs" />
+    <Compile Include="Math\Shapes\Quad.cs" />
+    <Compile Include="Math\Shapes\Triangle.cs" />
     <Compile Include="Reflection\GlyphTypeInfo.cs" />
     <Compile Include="Exceptions\GlyphException.cs" />
     <Compile Include="Axes.cs" />
